--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -28,7 +28,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/resetpassword"
-        android:layout_marginBottom="35dp"/>
+        android:layout_marginBottom="15dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:text="RESTABLECER CONTRASEÑA"
+            android:textAlignment="center"
+            android:layout_marginBottom="40dp"/>
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -48,8 +57,16 @@
             android:drawableLeft="@drawable/correo"
             android:textColorHint="#ccc"
             android:inputType="textEmailAddress"/>
-
     </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Escribe tú dirección de e-mail y te enviaremos un \nenlace para restablecer tu contraseña"/>
+
 
     </LinearLayout>
 
@@ -66,6 +83,7 @@
             android:layout_marginLeft="45dp"
             android:layout_marginRight="45dp"
             android:background="@drawable/btnlogin"
+            android:layout_marginBottom="15dp"
             android:text="Recuperar clave"
             android:textColor="@color/colorPrimaryDark"
             android:textAllCaps="false"
