Menú del ciclista ME FALTA TERMINAR PERFIL

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,40 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context=".MenuActivity">
-
-    <TextView
-        android:id="@+id/pr_name_menu"
+    
+    <FrameLayout
+        android:id="@+id/content_ciclista"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nombre usuario"
-        android:textAlignment="center"
-        android:textColor="#000"
-        android:textSize="18dp"/>
+        android:layout_height="match_parent"/>
 
-    <TextView
-        android:id="@+id/pr_email_menu"
+
+    <com.ismaeldivita.chipnavigation.ChipNavigationBar
+        android:id="@+id/nav_ciclista"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Email usuario"
-        android:textAlignment="center"
-        android:textColor="#000"
-        android:layout_marginTop="10dp"
-        android:textSize="18dp"/>
+        android:layout_height="72dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/rounded"
+        android:elevation="16dp"
+        android:padding="8dp"
+        app:cnb_menuResource="@menu/menu_ciclista"/>
 
-    <Button
-        android:id="@+id/btn_cerrarsesion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cerrar Sesión"
-        android:background="@color/colorAccent"
-        android:textColor="#fff"
-        android:layout_margin="20dp"/>
 
-</LinearLayout>
+</RelativeLayout>
