--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,6 +10,7 @@
     <FrameLayout
         android:id="@+id/content_ciclista"
         android:layout_width="match_parent"
+        android:layout_marginBottom="75dp"
         android:layout_height="match_parent"/>
 
 
