--- a/app/src/main/res/layout/fragment_sitios.xml
+++ b/app/src/main/res/layout/fragment_sitios.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
     tools:context=".Ciclista.SitiosFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recy_sitios"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:textSize="25dp"
-        android:textColor="#000"
-        android:text="SITIOS" />
-
+        android:layout_height="match_parent"/>
 </FrameLayout>
