--- a/app/src/main/res/layout/fragment_sitios.xml
+++ b/app/src/main/res/layout/fragment_sitios.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
+    android:background="@color/colorPrimary"
     tools:context=".Ciclista.SitiosFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs_sitios"
+                android:backgroundTint="@color/colorPrimaryDark"
+                app:tabTextColor="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="?attr/colorPrimary" />
+
+            <androidx.appcompat.widget.SearchView
+                app:queryHint="Buscar"
+                android:id="@+id/bs_sitio"
+                android:background="@color/colorPrimary"
+                android:inputType="textNoSuggestions"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"/>
+        </com.google.android.material.appbar.AppBarLayout>
+
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="10dp"
         android:id="@+id/recy_sitios"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+
 </FrameLayout>
