--- a/app/src/main/res/layout/sitios_row.xml
+++ b/app/src/main/res/layout/sitios_row.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:cardCornerRadius="12dp"
-    android:layout_margin="7dp"
+    android:layout_margin="8dp"
     android:elevation="90dp">
 
     <LinearLayout
@@ -45,12 +45,24 @@
 
         <androidx.appcompat.widget.AppCompatRatingBar
             android:id="@+id/calificacion_sitio"
+            android:theme="@style/RatingBar.Yellow"
             android:progressBackgroundTint="@color/colorPrimary"
             android:layout_gravity="end"
             android:isIndicator="true"
             android:layout_marginTop="-89dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+        <com.like.LikeButton
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="-5dp"
+            android:id="@+id/btn_favor_sitio"
+            android:layout_gravity="end"
+            android:layout_marginEnd="10dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            app:icon_size="20dp"
+            app:icon_type="heart"/>
 
 
     </LinearLayout>
