--- a/app/src/main/res/layout/activity_detalle_sitio.xml
+++ b/app/src/main/res/layout/activity_detalle_sitio.xml
@@ -1,175 +1,216 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:background="@color/colorPrimary"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="0dp"
     tools:context=".Ciclista.DetalleSitioActivity">
 
-    <androidx.cardview.widget.CardView
+    <fragment
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:id="@+id/map_detalle_sitio"
         android:layout_width="match_parent"
+        android:layout_height="250dp"
+        tools:context=".Ciclista.DetalleSitioActivity" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:background="@drawable/btnlogin"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:textAllCaps="false"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:cardCornerRadius="12dp"
-        android:layout_margin="7dp"
-        android:elevation="90dp">
+        android:text="Ir a la ruta"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="25dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="248dp"
-            android:orientation="vertical"
-            android:background="@color/colorAccent">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="centerCrop"
-                android:id="@+id/img_sitio_detalle"/>
-
-            <TextView
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="-10dp"
-                android:id="@+id/nombre_sitio_detalle"
-                android:layout_width="match_parent"
-                android:textSize="18dp"
-                android:layout_height="wrap_content"
-                android:textColor="#fff"
-                android:fontFamily="@font/bungee"
-                android:text="Nombre Ruta"/>
-
-            <TextView
-                android:layout_marginTop="-13dp"
-                android:fontFamily="@font/baloo"
-                android:layout_marginStart="20dp"
-                android:id="@+id/detalle_sitio_detalle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#fff"
-                android:textSize="16dp"
-                android:text="Detalle Ruta"/>
-
-            <androidx.appcompat.widget.AppCompatRatingBar
-                android:id="@+id/calificacion_sitio_detalle"
-                android:progressBackgroundTint="@color/colorPrimary"
-                android:layout_gravity="end"
-                android:isIndicator="true"
-                android:layout_marginTop="-89dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+    <fragment
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
-        android:layout_marginStart="-10dp"
-        android:layout_marginEnd="-10dp"
-        android:layout_marginBottom="30dp"
-        android:background="@color/colorPrimary"
-        android:padding="20dp">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/colorPrimary"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="10dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:background="@color/colorPrimary"
-                android:layout_height="match_parent"
-                android:padding="5dp">
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/ic_settings" />
-
-            </RelativeLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            app:cardBackgroundColor="@color/colorPrimary"
-            app:cardCornerRadius="10dp"
-            android:layout_marginStart="5dp"
-            app:cardElevation="10dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorPrimary"
-                android:padding="5dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/abhaya_libre_semibold"
-                    android:includeFontPadding="false"
-                    android:text="Aquí va a ir el comentario hecho por santiago henao el día de hoy"
-                    android:layout_alignParentStart="true"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:layout_alignParentBottom="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/abhaya_libre_semibold"
-                    android:includeFontPadding="false"
-                    android:layout_alignParentStart="true"
-                    android:text="Santiago Henao"
-                    android:textColor="#000"
-                    android:textSize="15sp" />
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:fontFamily="@font/abhaya_libre_semibold"
-                    android:includeFontPadding="false"
-                    android:layout_alignParentEnd="true"
-                    android:text="18/06/2020"
-                    android:textColor="#000"
-                    android:textSize="15sp" />
-
-            </RelativeLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:hint="asdad"/>
+        <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="5dp">
 
-        <Button
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Distacia"
+        android:textSize="19dp"
+        android:fontFamily="@font/baloo"
+        android:textColor="#6C6666"/>
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Agregar"/>
+            android:text="4,94 km"
+            android:textSize="20dp"
+            android:fontFamily="@font/baloo"
+            android:textColor="#000"/>
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dificultad técnica"
+                android:textSize="19dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#6C6666"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Moderado"
+                android:textSize="20dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#000"/>
+
+        </LinearLayout>
 
 
     </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginRight="26dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Desnivel\nsubiendo"
+                android:textSize="19dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#6C6666"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="814 m"
+                android:textSize="20dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#000"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tiempo total"
+                android:textSize="19dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#6C6666"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3 h 15 min"
+                android:textSize="20dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#000"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Altitud\nmáxima"
+                android:textSize="19dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#6C6666"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2.276 m"
+                android:textSize="20dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#000"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="52dp"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Altitud mínima"
+                android:textSize="19dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#6C6666"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1.437 m"
+                android:textSize="20dp"
+                android:fontFamily="@font/baloo"
+                android:textColor="#000"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</LinearLayout>
